[package]
name = "regex-parsers"
version = "0.1.0"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
either = "1.6.1"
regex = "1.5.4"


[dev-dependencies]
