[package]
name = "test-rp"
version = "0.1.0"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-parsers = { path = ".." }
regex-procs = { path = "../../regex-procs", features = ["no_log"]}
lazy_static = "1.4.0"
regex = "1.5.3"
either = "1.6.1"
